<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheProject</string>
    <string name="action_settings">Settings</string>
    <string name="home">Homepage</string>
    <string name="map">Map</string>
    <string name="walks">Walks</string>
    <string name="attractions">Attractions</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="publicWalks">Public Walks</string>

</resources>
