<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <Button
        android:id="@+id/bMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map" />

    <Button
        android:id="@+id/bWalks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walks" />
    
    <Button
        android:id="@+id/bAttractions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attractions" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

</LinearLayout>
